--- a/type.css
+++ b/type.css
@@ -4,7 +4,7 @@ h1,h2,h3, body{
     font-size: 21px;
 }
 .text-meta{
-    font-family: apercu mono;
+    font-family: apercu-mono;
     font-weight: 300;
     font-size: 12.5px;
     letter-spacing: 1px;
