--- a/apercu.css
+++ b/apercu.css
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-    font-family: 'apercu mono';
+    font-family: 'apercu-mono';
     src: url('Apercu/ApercuMono.otf') format('otf');
     font-weight: 300;
     font-style: normal;
