--- a/landing.css
+++ b/landing.css
@@ -1,16 +1,11 @@
-html{
-    border-bottom: 4px solid #49FF7C;
-}
-
 html, body {
-    background-color: #33733D;
+    background-color: #314734;
     color: #49FF7C; 
     padding: 0;
 }
 
 body{
     padding: .5em;
-    background: linear-gradient(0deg, #33733D -9.86%, #253528 100%);
 }
 
 #logo {
