--- a/landing.css
+++ b/landing.css
@@ -1,11 +1,11 @@
 html, body {
     background-color: #314734;
-    color: #49FF7C; 
+    color: #49FF7C;
     padding: 0;
-}
-
-body{
-    padding: .5em;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 #logo {
@@ -13,22 +13,26 @@ body{
     height: 86px;
 }
 
+svg {
+    fill: currentColor;
+}
+
+
 /* Flex stuff */
 .wrapper {
     display: flex;  
     flex-flow: row wrap;
     align-items: flex-end;
-    padding-bottom: 1em;
-    height: 96vh;
+    width: 100%;
+    height: 50%;
+    margin: 4% 0;
+    position: absolute;
+    bottom: 0;
   }
   
     .wrapper > * {
-        padding: 2%;
         flex: 1 100%;
-    }
-  
-    .header{
-        display: none;
+        margin: 0 4vw;
     }
 
     .footer{
@@ -48,15 +52,41 @@ body{
         text-align: right;
         align-content: right;
     }
-  
-    @media all and (min-width: 600px) {
-        .aside { flex: 1 0 0; }
+
+    
+/* Flex resize */
+@media all and (min-width: 600px) {
+    .aside { flex: 1 0 0; }
+}
+
+@media all and (min-width: 800px) {
+    .main    { flex: 3 0px; }
+    .aside-1 { order: 1; } 
+    .main    { order: 2; }
+    .aside-2 { order: 3; }
+    .footer  { order: 4; }
+}
+
+
+/* System theming */
+@media (prefers-color-scheme: dark) {
+    html {
+        background-color: #111;
     }
-  
-    @media all and (min-width: 800px) {
-        .main    { flex: 3 0px; }
-        .aside-1 { order: 1; } 
-        .main    { order: 2; }
-        .aside-2 { order: 3; }
-        .footer  { order: 4; }
+    body {
+        background: radial-gradient(107.49% 111.57% at 45.03% 139.45%, #4E8202 0%, #253528 99.99%, #253528 100%);
+        color: #BDFF00;
+
+        /* background: radial-gradient(109.93% 118.46% at 45.03% 147.36%, #33733D 0%, #253528 99.99%, rgba(37, 53, 40, 0) 100%), #253528;
+        color: #49FF7C; */
     }
+}
+@media (prefers-color-scheme: light) {
+    html { 
+        background-color: #fff;
+    }
+    body {
+       background: radial-gradient(107.03% 107.03% at 45.03% -16.02%, #BDFF00 0%, #E7FFA0 51.33%, #FFFFFF 100%);
+       color: #5B713A;
+    }
+}
