--- a/type.css
+++ b/type.css
@@ -8,6 +8,7 @@ h1,h2,h3, body{
 .text-meta{
     font-family: apercu mono;
     font-weight: 300;
+    letter-spacing: 1px;
     font-size: 12.5px;
     text-transform: uppercase;
     line-height: 130%;
@@ -23,7 +24,8 @@ p{
 
 a{
     font-family: apercu mono;
-    letter-spacing: 1px;
+    
+    text-transform: uppercase;
     color: currentColor;
     text-decoration-style: dotted;
     text-decoration-thickness: .2px;
