--- a/type.css
+++ b/type.css
@@ -1,12 +1,12 @@
 h1,h2,h3, body{
-    font-family: 'apercu';
+    font-family: 'apercu', sans-serif;
     font-weight: 400;
     font-size: 21px;
     line-height: 130%;
 }
 
 .text-meta{
-    font-family: 'apercu-mono';
+    font-family: 'apercu-mono', monospace;
     font-weight: 300;
     letter-spacing: 1px;
     font-size: 12.5px;
@@ -23,7 +23,7 @@ p{
 }
 
 a{
-    font-family: 'apercu-mono';
+    font-family: 'apercu-mono', monospace;
     
     text-transform: uppercase;
     color: currentColor;
