--- a/apercu.css
+++ b/apercu.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'apercu';
-    src: url('./Assets/Apercu/ApercuMedium.otf') format('otf');
+    src: url('./ApercuMedium.otf') format('otf');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'apercu-mono';
-    src: url('./Assets/Apercu/ApercuMono.otf') format('otf');
+    src: url('./ApercuMono.otf') format('otf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
