--- a/apercu.css
+++ b/apercu.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'apercu';
-    src: url("./jam-site/ApercuMedium.otf") format("opentype");
+    src: url("./ApercuMedium.otf") format("opentype");
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'apercu-mono';
-    src: url("./jam-site/ApercuMono.otf") format("opentype");
+    src: url("./ApercuMono.otf") format("opentype");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
