--- a/apercu.css
+++ b/apercu.css
@@ -4,6 +4,8 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
+    text-rendering: optimizeLegibility; 
+    font-smoothing: anti-aliased;
 }
 
 @font-face {
@@ -12,4 +14,6 @@
     font-weight: 300;
     font-style: normal;
     font-display: swap;
+    text-rendering: optimizeLegibility; 
+    font-smoothing: anti-aliased;
 }
