--- a/landing.css
+++ b/landing.css
@@ -1,6 +1,6 @@
 html, body {
     background-color: #FFF9F1;
-    color: #49FF7C;
+    color: #D13644;
     padding: 0;
     margin: 0;
     width: 100%;
