--- a/landing.css
+++ b/landing.css
@@ -1,14 +1,11 @@
 html, body {
+    background-color: #FFF9F1;
+    color: #D13644;
     padding: 0;
     margin: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-}
-
-body {
-    margin: 20px;
-    border-radius: 10px;
 }
 
 #logo {
